// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subject.tsx snapshots render with Spinner 1`] = `
Array [
  <h1
    className="sc-fzoLag aoduX"
  >
    people
  </h1>,
  <div
    className="sc-fzoXzr gjwfCR"
  />,
  <ul
    className="sc-AxirZ sc-fzqBZW fYrObk"
  >
    <li
      className="sc-AxiKw sc-fzplWN hGswWD"
    >
      <button
        className="sc-AxhCb sc-fznyAO hmAjLB"
      >
        <h1 />
        s
      </button>
      <div
        className="sc-fznZeY dDFrgx"
      >
        <div
          className="sc-fznKkj iTpAqQ"
          onClick={[Function]}
        />
        <h1 />
        <p>
          gender: 
        </p>
        <p>
          weight: 
          kg
        </p>
        <p>
          height: 
          cm
        </p>
      </div>
    </li>
  </ul>,
  <footer
    className="sc-AxmLO fZfazS"
  >
    <button
      className="sc-AxhCb sc-Axmtr gyNiSL"
      onClick={[Function]}
    >
      Go Back
    </button>
    <button
      className="sc-AxhCb sc-Axmtr gyNiSL"
      onClick={[Function]}
    >
      Next
    </button>
    <div
      className="sc-fzozJi dshpyh"
    >
      <button
        className="sc-AxhCb sc-Axmtr fIjFPo"
        onClick={[Function]}
        tabIndex={0}
      >
        1
      </button>
    </div>
  </footer>,
]
`;

exports[`Subject.tsx snapshots render with data 1`] = `
Array [
  <h1
    className="sc-fzoLag aoduX"
  >
    people
  </h1>,
  <ul
    className="sc-AxirZ sc-fzqBZW fYrObk"
  >
    <li
      className="sc-AxiKw sc-fzplWN hGswWD"
    >
      <button
        className="sc-AxhCb sc-fznyAO hmAjLB"
      >
        <h1>
          Obi-Wan Kenobi
        </h1>
        s
      </button>
      <div
        className="sc-fznZeY dDFrgx"
      >
        <div
          className="sc-fznKkj iTpAqQ"
          onClick={[Function]}
        />
        <h1>
          Obi-Wan Kenobi
        </h1>
        <p>
          gender: 
          male
        </p>
        <p>
          weight: 
          77
          kg
        </p>
        <p>
          height: 
          182
          cm
        </p>
      </div>
    </li>
  </ul>,
  <footer
    className="sc-AxmLO fZfazS"
  >
    <button
      className="sc-AxhCb sc-Axmtr gFtPZS"
      onClick={[Function]}
    >
      Previous
    </button>
    <button
      className="sc-AxhCb sc-Axmtr gFtPZS"
      onClick={[Function]}
    >
      Next
    </button>
    <div
      className="sc-fzozJi dshpyh"
    >
      <button
        className="sc-AxhCb sc-Axmtr fIjFPo"
        onClick={[Function]}
        tabIndex={0}
      >
        1
      </button>
    </div>
  </footer>,
]
`;
